@@ -3,6 +3,8 @@ Broker:
   disappearing.
 - Fix some retained topic memory not being cleared immediately after used.
 - Fix error handling related to the `bind_interface` option.
+- Fix std* files not being redirected when daemonising, when built with
+  assertions removed. Closes #2708.
 
 2.0.15 - 2022-08-16
 ===================
